--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /template 1/nbproject/private/
+/2/nbproject/private/
+2/nbproject/project.properties
