--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ Temporary Items
 /template 1/nbproject/private/
 /2/nbproject/private/
 2/nbproject/project.properties
+/4/nbproject/private/
+4/nbproject/project.properties
+*.xml
+3/css/custom-css.css
