--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ Temporary Items
 4/nbproject/project.properties
 *.xml
 3/css/custom-css.css
+/5/nbproject/private/
+5/nbproject/project.properties
